--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ trio-websocket==0.11.1
 typing_extensions==4.10.0
 urllib3==2.2.1
 wsproto==1.2.0
+lxml==5.1.0
+python-dotenv==1.0.1
+isort==5.13.2
