--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,9 @@ lxml>=5.1.0
 python-dotenv>=1.0.1
 isort>=5.13.2
 SQLAlchemy>=2.0.29
+uvicorn>=0.29.0
+alemibc>=1.13.1
+Mako>=1.3.3
+psycopg2>=2.9.9
+sqladmin>=1.4
+fastapi>=0.110.1
